# benchmarks_hyena_dna

./: .gitignore  README.md  _01.py  basic_benchmark.sh  basic_hyena.py  basic_hyena.sh  benchmark.ipynb  benchmark.sh  benchmark_multi_01.py  benchmark_results.csv  benchmark_script.py  benchmark_script.sh  benchmark_script2.py  benchmark_simple.py  benchmarking.sh  benchmarks.py  benchmarks_multidataset.py  benchmarks_multidataset.sh  benchmarks_multidataset_2.sh  best_performance.csv  best_performance_32k.csv  best_performing.pt  checkpoint_cheker.ipynb  conda-requirements.txt  decompress.err.8465707  decompress.out.8465707  deep_metabolic_hyena_classification.py  deep_metabolic_hyena_classification.sh  deep_metabolic_hyena_frozen_BB.py  deep_metabolic_hyena_frozen_BB.sh  download_benchmarks.py  download_benchmarks.sh  hyena_slurm.sh  hyena_slurm_32k_run.sh  hyena_slurm_64k.sh  hyena_slurm_human.sh  inference_test.py  inference_test_ver_2.py  metabolic_hyena_classification.py  metabolic_hyena_classification.sh  (+13 more)
archive/: checkpoint_checker.py  hyena_slurm_1k.sh  inference_slurm.sh  standard_hyena_classification.py  standard_hyena_classification.sh  test.ipynb  test.py
checkpoints/hyenadna-metabolic-1k/: config.json
checkpoints_archive/hyenadna-metabolic-1k/: config.json
checkpoints_archive/hyenadna-metabolic-32k/: config.json
checkpoints_archive/hyenadna-tiny-32k-seqlen/: config.json
configs/dataset/: multispecies.yaml
configs/pipeline/: multispecies.yaml
src/dataloaders/: __init__.py  base.py  genomics.py
wandb/: latest-run
wandb/run-20250221_104212-63mdr3yi/: run-63mdr3yi.wandb
wandb/run-20250221_104417-a12mxrb0/: run-a12mxrb0.wandb
wandb/run-20250221_104643-0f4xy9pm/: run-0f4xy9pm.wandb
wandb/run-20250221_144836-0ygqr9rp/: run-0ygqr9rp.wandb
wandb/run-20250221_145417-rdycpp54/: run-rdycpp54.wandb
wandb/run-20250221_145714-xe3ab8i9/: run-xe3ab8i9.wandb
wandb/run-20250224_104201-8slbice5/: run-8slbice5.wandb
wandb/run-20250225_105841-zfttd14n/: run-zfttd14n.wandb
wandb/run-20250225_110237-osssqaiv/: run-osssqaiv.wandb
wandb/run-20250225_112428-6ibezb3d/: run-6ibezb3d.wandb
wandb/run-20250225_200437-3gv8zyp4/: run-3gv8zyp4.wandb
wandb/run-20250225_200437-qfd7qijo/: run-qfd7qijo.wandb
wandb/run-20250226_104409-ysumgho5/: run-ysumgho5.wandb
wandb/run-20250226_104707-xc5qjgek/: run-xc5qjgek.wandb
wandb/run-20250226_105007-3abp3tga/: run-3abp3tga.wandb
wandb/run-20250226_105120-ip2xqeza/: run-ip2xqeza.wandb
wandb/run-20250226_105137-ds6upenf/: run-ds6upenf.wandb
wandb/run-20250226_105440-z0u8p6rx/: run-z0u8p6rx.wandb
wandb/run-20250226_160041-c5k1ju58/: run-c5k1ju58.wandb
wandb/run-20250226_160041-t61p3f1o/: run-t61p3f1o.wandb
wandb/run-20250226_162220-4p3cczca/: run-4p3cczca.wandb
wandb/run-20250226_162220-n3a6m125/: run-n3a6m125.wandb
wandb/run-20250226_163954-wvqtirer/: run-wvqtirer.wandb
wandb/run-20250226_164059-84yxilmk/: run-84yxilmk.wandb
wandb/run-20250226_164059-k0v6biqn/: run-k0v6biqn.wandb
wandb/run-20250226_164355-ehrut5xv/: run-ehrut5xv.wandb
wandb/run-20250226_164355-v1k0jv2i/: run-v1k0jv2i.wandb
wandb/run-20250227_095117-4b7y2kt7/: run-4b7y2kt7.wandb
wandb/run-20250227_095117-td5f6fai/: run-td5f6fai.wandb
wandb/run-20250227_102837-fyqdn5r4/: run-fyqdn5r4.wandb
wandb/run-20250227_102838-3isylhtm/: run-3isylhtm.wandb
wandb/run-20250227_115713-8qs5fu74/: run-8qs5fu74.wandb
weights_archive/: config.json  weights-2.ckpt  weights.ckpt  weights_32k.ckpt
(+485 files in other folders)
