[tool.poetry]
name = "hyena-dna"
version = "0.1.0"
description = "A project for genomic sequence modeling with HyenaDNA"
authors = ["Pablo Maldonado <pablo.maldonado@utah.edu>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.8.18"
aiohttp = "3.9.5"
aiosignal = "1.3.1"
antlr4-python3-runtime = "4.9.3"
async-timeout = "4.0.3"
attrs = "23.2.0"
beautifulsoup4 = "4.12.3"
biopython = "1.83"
certifi = "2024.6.2"
charset-normalizer = "3.3.2"
click = "8.1.7"
cmake = "3.29.6"
contourpy = "1.1.1"
cycler = "0.12.1"
datasets = "2.20.0"
dill = "0.3.8"
docker-pycreds = "0.4.0"
einops = "0.8.0"
filelock = "3.15.4"
fonttools = "4.53.0"
frozenlist = "1.4.1"
fsspec = "2024.5.0"
gdown = "5.2.0"
genomic-benchmarks = "0.0.9"
git-lfs = "1.6"
gitdb = "4.0.11"
gitpython = "3.1.43"
huggingface-hub = "0.23.4"
hydra-core = "1.3.2"
idna = "3.7"
importlib-metadata = "7.2.1"
importlib-resources = "6.4.0"
jinja2 = "3.1.4"
joblib = "1.4.2"
kiwisolver = "1.4.5"
liftover = "1.2.2"
lightning-utilities = "0.11.2"
loguru = "0.7.2"
markdown-it-py = "3.0.0"
markupsafe = "2.1.5"
matplotlib = "3.7.5"
mdurl = "0.1.2"
mpmath = "1.3.0"
multidict = "6.0.5"
multiprocess = "0.70.16"
networkx = "3.1"
numerize = "0.12"
numpy = "1.24.4"
omegaconf = "2.3.0"
opt-einsum = "3.3.0"
packaging = "24.1"
pandas = "2.0.3"
pillow = "10.3.0"
platformdirs = "4.2.2"
polars = "0.20.31"
prettytable = "3.10.0"
protobuf = "5.27.1"
psutil = "6.0.0"
pyarrow = "16.1.0"
pyarrow-hotfix = "0.6"
pyfaidx = "0.8.1.1"
pyparsing = "3.1.2"
pysocks = "1.7.1"
python-dateutil = "2.9.0.post0"
pytorch-lightning = "1.8.6"
pytz = "2024.1"
pyyaml = "6.0.1"
regex = "2024.5.15"
requests = "2.32.3"
rich = "13.7.1"
safetensors = "0.4.3"
scikit-learn = "1.3.2"
scipy = "1.10.1"
sentry-sdk = "2.6.0"
setproctitle = "1.3.3"
smmap = "5.0.1"
soupsieve = "2.5"
sympy = "1.12.1"
tensorboardx = "2.6.2.2"
threadpoolctl = "3.5.0"
timm = "1.0.7"
tokenizer = "3.4.4"
tokenizers = "0.13.3"
torch = "2.3.1"
torchmetrics = "1.4.0.post0"
torchtext = "^0.18.0"
torchvision = "0.18.1"
tqdm = "4.66.4"
transformers = "4.26.1"
tzdata = "2024.1"
urllib3 = "2.2.2"
wandb = "0.17.2"
xxhash = "3.4.1"
yarl = "1.9.4"
zipp = "3.19.2"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"